# tradeproxy

./: Cargo.toml  test.sh
config/: default.yaml
doc/: example_signal.json  signal_schema.txt
src/: incoming.rs  main.rs  outgoing.rs  settings.rs
src/outgoing/: deal_and_bot_types.rs  execution_result.rs  mod.rs
