[package]
name = "tradeproxy"
version = "0.3.0"
authors = ["Geoff Pursell <geoffp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
log = "0.4.14"
flexi_logger = "0.17.1"
config = "0.11.0"
serde_derive = "1.0.126"
lazy_static = "1.4.0"
chrono = "0.4.19"
directories-next = "2.0.0"
reqwest = { version = "0.11.3", features = ["json"] }
httpmock = "0.5.8"
clap = "3.0.0-beta.2"

[dependencies.futures]
version = "0.3.15"
features = ["alloc", "executor"]
default-features = false
